push image to GitHub Container Registry first GHCR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,8 @@ jobs:
       run: |
         python manage.py migrate
         python manage.py test
+    
+    - name: Build and push Docker image
+      run: |
+        docker build -t ghcr.io/sivonei/book-catalog-api:latest .
+        docker push ghcr.io/sivonei/book-catalog-api:latest
