--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,21 +39,24 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python # Use Python 3.11
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
+    # Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    
+    # Wait for PostgreSQL to be ready
     - name: Run tests
       run: |
         python manage.py migrate
         python manage.py test
     
+    # Build and push Docker image
     - name: Build and push Docker image
       run: |
         docker build -t ghcr.io/sivonei/book-catalog-api:latest .
