--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,10 @@ jobs:
         python manage.py test
     
     # Build and push Docker image
-    - name: Build and push Docker image
+    - name: Build and push Docker image to GHCR
+      env:
+        IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/book-catalog-api:latest
       run: |
-        docker build -t ghcr.io/sivonei/book-catalog-api:latest .
-        docker push ghcr.io/sivonei/book-catalog-api:latest
+        docker build -t $IMAGE_NAME .
+        docker push $IMAGE_NAME
+
